<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/gr_equip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="@dimen/edit_margin"
            android:paddingLeft="@dimen/edit_margin"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/edit_margin">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/edit_equip_kind"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/white"
                            android:textSize="@dimen/edit_text_font_size"
                            android:id="@+id/txt_equip_kind" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_equip_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:text="@string/edit_equip_name_default"
                            android:textColor="@color/ocr_txt_no"
                            android:textSize="@dimen/edit_text_font_size"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center_horizontal"
                            android:padding="5dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"

                        android:padding="5dp"
                        android:gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/edit_element_kind"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/white"
                            android:textSize="@dimen/edit_text_font_size"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/txt_element_kind" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/gr_properties"
                android:visibility="visible">

                <TextView
                    android:id="@+id/txt_properties_kind_s1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/edit_text_default"
                    android:textSize="@dimen/edit_text_font_size"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit_properties_default"
                    android:gravity="center_horizontal"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/txt_properties_kind_h1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/edit_text_default"
                    android:textSize="@dimen/edit_text_font_size"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit_properties_default"
                    android:gravity="center_horizontal"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/txt_properties_kind_s2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/edit_text_default"
                    android:textSize="@dimen/edit_text_font_size"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit_properties_default"
                    android:gravity="center_horizontal"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/txt_properties_kind_h2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/edit_text_default"
                    android:textSize="@dimen/edit_text_font_size"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit_properties_default"
                    android:gravity="center_horizontal"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/txt_properties_kind_s3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/edit_text_default"
                    android:textSize="@dimen/edit_text_font_size"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit_properties_default"
                    android:gravity="center_horizontal"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/txt_properties_kind_h3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/edit_text_default"
                    android:textSize="@dimen/edit_text_font_size"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit_properties_default"
                    android:gravity="center_horizontal"
                    android:padding="5dp" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_avatar"
            android:src="@drawable/shirt"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" />
    </RelativeLayout>


</LinearLayout>
